<merge xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/customborder"
        android:orientation="vertical">

        <TextView
            android:id="@+id/editText7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:textSize="18sp"
            android:layout_marginTop="12dp"
            android:background="@drawable/customborder"
            android:ems="20"
            android:textColorHint="@color/colorPrimary"
            android:textColor="@color/colorPrimary"
            android:hint="@string/add_onoma_forea" />

        <!-- Spinner Element -->
        <Spinner
            android:id="@+id/spinnerUni"
            android:layout_width="fill_parent"
            android:layout_height="38dp"
            android:layout_marginTop="12dp"
            android:prompt="@string/spinner_titleUni"
            android:visibility="gone"
            android:spinnerMode="dialog" />
        <!-- Spinner Element -->
        <Spinner
            android:id="@+id/spinnerOrg"
            android:layout_width="fill_parent"
            android:layout_height="38dp"
            android:layout_marginTop="12dp"
            android:prompt="@string/spinner_titleOrg"
            android:visibility="gone"
            android:spinnerMode="dialog" />
        <!-- Spinner Element -->
        <Spinner
            android:id="@+id/spinnerRes"
            android:layout_width="fill_parent"
            android:layout_height="38dp"
            android:layout_marginTop="12dp"
            android:prompt="@string/spinner_titleRes"
            android:visibility="gone"
            android:spinnerMode="dialog" />

    </LinearLayout>
</merge>
