<?xml version="1.0" encoding="utf-8"?>
<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/relativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#ffffff">

    <TextView
        android:id="@+id/labelSearch_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:textSize="18sp"
        android:layout_marginTop="12dp"
        android:layout_alignParentTop="true"
        android:textColor="@color/colorPrimary"
        android:text="@string/delete_only" />
    <EditText
        android:id="@+id/deleteText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:ems="20"
        android:hint="@string/add_mitroo"
        android:textColorHint="@color/colorSearch" />
    <Button
        android:id="@+id/btn_delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginTop="12dp"
        android:background="@color/white"
        android:text="@string/delete_btn"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical"
        >
        <HorizontalScrollView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" >
            <TableLayout
                android:id="@+id/tableView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:stretchColumns="0,1" />

        </HorizontalScrollView>
    </ScrollView>

</LinearLayout>