
<merge xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="479dp"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">
        <LinearLayout

            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:background="@color/white">

            <EditText
                android:id="@+id/editText1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:background="@drawable/customborder"
                android:ems="20"
                android:hint="@string/Add_name"
                android:selectAllOnFocus="true"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorPrimary" />

            <EditText
                android:id="@+id/editText2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:background="@drawable/customborder"
                android:ems="20"
                android:hint="@string/add_mitroo"
                android:textAlignment="textStart"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorPrimary" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:id="@+id/relLayout12">

                <include android:id="@+id/personalSxoli" layout="@layout/sxoli"/>
            </RelativeLayout>


            <EditText
                android:id="@+id/editText4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:background="@drawable/customborder"
                android:ems="20"
                android:hint="@string/add_epidosi"
                android:textAlignment="textStart"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorPrimary" />

            <!-- Kathgoria metakinisis-->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:id="@+id/relLayout18">

                <include android:id="@+id/kat_metakinisis" layout="@layout/kat_metakinisis"/>
            </RelativeLayout>

          <!-- Spinner Element -->

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:id="@+id/relLayout13">

                <include android:id="@+id/forea_upodoxis" layout="@layout/forea_upodoxis"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:id="@+id/relLayout19">

                <include android:id="@+id/foreisName" layout="@layout/spinnerforeis"/>
            </RelativeLayout>
        

            <!-- Map Element -->
            <RelativeLayout
                android:id="@+id/relLayout15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
               android:layout_marginTop="10dp">

                <include
                    android:id="@+id/xora_upodoxis" layout="@layout/xora_forea" />
            </RelativeLayout>


            <!-- Spinner Element -->

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/relLayout15"
                android:layout_marginTop="10dp"
                android:id="@+id/relLayout14">

                <include android:id="@+id/forea_upodoxis"
                    layout="@layout/metakinisi_parelthon"/>
            </RelativeLayout>


        <Button
            android:id="@+id/button"
            style="@android:style/Widget.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/editText9"
            android:layout_marginTop="62dp"
            android:text="Submit"
            android:textSize="16sp"
            android:textStyle="normal|bold" />
        </LinearLayout>
    </ScrollView>

</merge>